--- a/client/package.json
+++ b/client/package.json
@@ -67,5 +67,9 @@
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-web-worker-loader": "^1.6.1",
         "stacktrace-js": "2.0.2"
+    },
+    "resolutions": {
+        "ansi-regex": "5.0.1",
+        "terser": "5.14.2"
     }
 }
