--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
         "react-virtualized-auto-sizer": "^1.0.6",
         "react-virtuoso": "^2.13.1",
         "recharts": "^2.1.13",
+        "sanitize-html": "^2.7.1",
         "source-map-explorer": "^2.5.2",
         "stacktrace-js": "^2.0.2",
         "subscriptions-transport-ws": "^0.11.0",
@@ -133,6 +134,7 @@
         "@types/react-select": "^3.0.28",
         "@types/react-slider": "^1.3.1",
         "@types/react-syntax-highlighter": "^13.5.2",
+        "@types/sanitize-html": "^2.6.2",
         "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^5.30.6",
         "@typescript-eslint/parser": "^5.30.6",
