convert @highlight-run/sourcemap-uploader to ESM
update required for node-fetch security vulnerability fix in v3 which
does not support CJS.

--- a/sourcemap-uploader/package.json
+++ b/sourcemap-uploader/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@highlight-run/sourcemap-uploader",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "Command line tool to upload source maps to Highlight",
   "main": "index.js",
+  "module": "index.js",
+  "type": "module",
   "author": "Highlight",
   "license": "MIT",
   "scripts": {
