--- a/package.json
+++ b/package.json
@@ -57,5 +57,20 @@
 		"pretty-quick": "^3.1.3",
 		"turbo": "^1.5.4"
 	},
-	"packageManager": "yarn@3.2.3"
+	"packageManager": "yarn@3.2.3",
+	"resolutions": {
+		"ansi-regex": "3.0.1",
+		"ejs": "3.1.7",
+		"eventsource": "1.1.1",
+		"glob-parent": "5.1.2",
+		"lodash": "4.17.21",
+		"minimist": "1.2.6",
+		"node-fetch": "2.6.7",
+		"normalize-url": "4.5.1",
+		"nth-check": "2.0.1",
+		"object-path": "0.11.8",
+		"prismjs": "1.27.0",
+		"tmpl": "1.0.5",
+		"trim-newlines": "3.0.1"
+	}
 }
